[package]
name = "remsess_inject"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "runner"
path = "src/runner.rs"

[[bin]]
name = "injector"
path = "src/injector.rs"

[dependencies]
rand = "0.8.5"
windows = { version = "0.56.0", features = ["Win32_System_LibraryLoader", "Win32_System_Diagnostics_Debug","Win32_System_Diagnostics_ToolHelp", "Win32_System_Threading", "Win32_Storage_FileSystem", "Win32_System_Memory", "Win32_Security", "Win32_System_SystemServices"] }
